--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body>
+<body id="sky">
   
   <!-- 
       1. Install jQlouds plugin
@@ -23,7 +23,7 @@
       2. Place a max of 10 clouds on the <body>
       3. Cloud dimensions
          - Max Width 300 pixels
-         
+
          - Min With 200 pixels 
       4. Make clouds move `wind` option
       5. Use alternate image, `new-cloud.png`,  in `img` folder
